--- a/app/src/main/assets/Aufgabenloesung/loesungpointer.html
+++ b/app/src/main/assets/Aufgabenloesung/loesungpointer.html
@@ -15,17 +15,12 @@
 <p></p>
 <p><em></em></p>
 <p><span style="text-decoration: underline;"><strong>Aufgabe 2</strong></span></p>
-<p>Was gibt folgendes Programm auf dem Bildschirm aus?</p>
-<table style="border-collapse: collapse; width: 100%;" border="1">
+<p>Welchen Wert hat die Variable x am Ende des Programms?</p>
+<table style="border-collapse: collapse; width: 100%; height: 47px;" border="1">
     <tbody>
-    <tr>
-        <td style="width: 100%;">
-            <p>*Demo mit Zeigern und Vektoren*</p>
-            <p>- 20 -10 0 10 20</p>
-            <p>&nbsp; 20 10 0 -10 -20</p>
-            <p>&nbsp; &nbsp; 0 0</p>
-            <p>- 10 10</p>
-            <p>- 20 20</p>
+    <tr style="height: 47px;">
+        <td style="width: 100%; height: 47px;">
+            <p>Die Variable 'x' hat den Wert 10</p>
         </td>
     </tr>
     </tbody>
