Navigationbar ausgeblendet Grafik in Statistik eingebunden Layout Optimierung

--- a/app/src/main/assets/Aufgaben/aufgabeentscheidungen.html
+++ b/app/src/main/assets/Aufgaben/aufgabeentscheidungen.html
@@ -8,7 +8,7 @@
             <p><em>&nbsp;</em></p>
             <p><em>main(){</em></p>
             <p><em>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; char bstb;</em></p>
-            <p><em>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; pritf("\nBitte keine Umlaute eingeben!\n);</em></p>
+            <p><em>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; printf("\nBitte keine Umlaute eingeben!\n);</em></p>
             <p><em>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; printf("\nBuchstabe: ");</em></p>
             <p><em>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; bstb=getchar();</em></p>
             <p><em>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; if(bstb &lt; 'A' || bstb &gt; 'Z' &amp;&amp; bstb &lt; 'a')</em></p>
@@ -16,7 +16,7 @@
             <p><em>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; else if(bstb &gt;= 'A' &amp;&amp; bstb &lt;= 'Z')</em></p>
             <p><em>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; printf("\nSie haben ... eingegeben.");</em></p>
             <p><em>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; else</em></p>
-            <p><em>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; pritf("\nSie haben ... eingegeben.");</em></p>
+            <p><em>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; printf("\nSie haben ... eingegeben.");</em></p>
             <p><em>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; }</em></p>
         </td>
     </tr>
